cmake_minimum_required(VERSION 3.5)


set(SLCAN_CPP_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}")
set(SLCAN_ROOT_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../..")



set(MAIN_PROJECT OFF)
if(CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_SOURCE_DIR)
        set(MAIN_PROJECT ON)
endif()



add_library(SLCAN STATIC empty.cpp)
